--- a/config.json
+++ b/config.json
@@ -2,23 +2,25 @@
   "robot_type": "so100",
   "policies": {
     "pick": {
-      "path": "lerobot/outputs/train/act_aloha_insertion/checkpoints/001000/pretrained_model",
+      "path": "/root/workspace/lerobot/outputs/train/act_aloha_insertion/checkpoints/005000/pretrained_model",
       "device": "cuda",
+      "metadata_path": "/root/.cache/huggingface/lerobot/lerobot/aloha_sim_insertion_human",
       "use_amp": false,
       "type": "act",
-      "control_time_s": 10.0,
+      "control_time_s": 15.0,
       "fps": 30
     },
     "transfer": {
-      "path": "lerobot/outputs/train/act_aloha_insertion/checkpoints/002000/pretrained_model",
-      "device": "cpu",
+      "path": "/root/workspace/lerobot/outputs/train/act_aloha_insertion/checkpoints/002000/pretrained_model",
+      "device": "cuda",
+      "metadata_path": "/root/.cache/huggingface/lerobot/lerobot/aloha_sim_insertion_human"  ,
       "use_amp": false,
       "type": "act",
-      "control_time_s": 10.0,
+      "control_time_s": 20.0,
       "fps": 30
     }
   },
   "default_task": "pick",
-  "control_time_s": 10.0,
+  "control_time_s": 15.0,
   "display_cameras": false
 }
